color and vh bug on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -133,6 +133,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
+    height: 100dvh;
     width: 100vw;
     /* overflow: hidden; */
     position: relative;
