--- a/src/components/StatusBar.module.css
+++ b/src/components/StatusBar.module.css
@@ -16,6 +16,7 @@
 .statusbar__links {
     display: flex;
     gap: 1rem;
+    color: aliceblue;
 }
 
 .socials {
